test(forge-1.20.1): select the whole reference suite — 258 registered, 257 passing
All twenty-two reference test classes now compile and run on this line. The count matches the
suite-count script's expected figure exactly.

Translation
Mostly mechanical. The genuine deltas were a registry-aware byte buffer that does not exist
before 1.20.5, a block renamed in the same version, two Java methods newer than this toolchain,
a spawn-position helper that lives on a different class here and needs an explicit placement
type, an event-bus overload Forge does not offer, and two NeoForge-only surfaces with plain
vanilla equivalents on this version.

The suite reached per-chunk and per-level state through attachment handles, which have no Forge
equivalent at all. A new test-only access class gives it the same verbs against the capability
instead. It lives in the gametest source set, carries no test annotation so it cannot move the
suite count, and cannot reach a shipped archive.

One row was rewritten rather than translated. It asked a registry whether the placement fact is
declared synchronized; Forge has no such registry, because synchronization here is explicit
rather than declared. It now asserts the store is attached, and the round-trip below it, which is
what the row was really protecting, is untouched.

Two defects the wider suite caught, both mine
The chunk store mutated its fact map in place where the suite requires a changed write to replace
it. That is the same defect as the client mirror fixed earlier and for the same reason: readers
hold a published map without a lock, and the render path decides whether anything changed by
comparing references. Both writers are copy-on-write now.

The whole-map setter also took a defensive copy, where the donor's adopts the caller's map by
reference and a row depends on mutating it afterwards. It adopts by reference now.

The one remaining red, and what it is not
The hot-path allocation gate measures 776 bytes per call against a 3